UI update to job search and viewing
